[gd_scene load_steps=2 format=3 uid="uid://cre0ah1m4end8"]

[ext_resource type="Script" uid="uid://3q2jueuwmf2m" path="res://scenes/ui/death_screen.gd" id="1_j0ehl"]

[node name="DeathScreen" type="CanvasLayer"]
script = ExtResource("1_j0ehl")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0.952941, 0.952941, 0.168627)

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -35.0
offset_top = -50.5
offset_right = 35.0
offset_bottom = 50.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 2

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer"]
layout_mode = 2
mouse_filter = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer"]
layout_mode = 2
mouse_filter = 2

[node name="TipHeader" type="RichTextLabel" parent="MarginContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
bbcode_enabled = true
text = "[center][wave]Tennis Tips:[/wave][/center]"
fit_content = true

[node name="DeathTip" type="Label" parent="MarginContainer/PanelContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Lorem ipsum long text to test this out!!!!"

[node name="RestartButton" type="Button" parent="MarginContainer/PanelContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Restart"

[node name="OptionsButton" type="Button" parent="MarginContainer/PanelContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Options"

[node name="QuitButton" type="Button" parent="MarginContainer/PanelContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Quit"
